--- a/Code/Final_Test.ioc
+++ b/Code/Final_Test.ioc
@@ -10,26 +10,29 @@ Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IP5=TIM2
 Mcu.IP6=TIM3
-Mcu.IPNb=7
+Mcu.IP7=TIM4
+Mcu.IPNb=8
 Mcu.Name=STM32F101R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC0
 Mcu.Pin1=PC1
-Mcu.Pin10=PA14
-Mcu.Pin11=PB6
-Mcu.Pin12=PB7
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin15=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin2=PA2
-Mcu.Pin3=PA5
-Mcu.Pin4=PA6
-Mcu.Pin5=PB10
-Mcu.Pin6=PB11
-Mcu.Pin7=PB13
-Mcu.Pin8=PB15
-Mcu.Pin9=PA13
-Mcu.PinsNb=16
+Mcu.Pin10=PB15
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PB6
+Mcu.Pin14=PB7
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin16=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin17=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin2=PA0-WKUP
+Mcu.Pin3=PA1
+Mcu.Pin4=PA2
+Mcu.Pin5=PA5
+Mcu.Pin6=PA6
+Mcu.Pin7=PB10
+Mcu.Pin8=PB11
+Mcu.Pin9=PB13
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F101RDTx
@@ -47,9 +50,11 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA0-WKUP.Signal=S_TIM2_CH1_ETR
+PA1.Signal=S_TIM2_CH2
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -127,7 +132,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C2_Init-I2C2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C2_Init-I2C2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.ADCFreqValue=18000000
 RCC.AHBFreq_Value=36000000
 RCC.APB1Freq_Value=36000000
@@ -148,19 +153,30 @@ SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
+SH.S_TIM2_CH2.ConfNb=1
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM2.IPParameters=Prescaler,Period,AutoReloadPreload
-TIM2.Period=10075
-TIM2.Prescaler=3600
+TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV1
+TIM2.EncoderMode=TIM_ENCODERMODE_TI12
+TIM2.IC1Filter=0
+TIM2.IPParameters=Prescaler,Period,AutoReloadPreload,EncoderMode,IC1Filter,ClockDivision
+TIM2.Period=19
+TIM2.Prescaler=0
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.ClockDivision=TIM_CLOCKDIVISION_DIV1
 TIM3.IPParameters=AutoReloadPreload,Prescaler,Period,ClockDivision
 TIM3.Period=10075
 TIM3.Prescaler=3600
+TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM4.IPParameters=AutoReloadPreload,Prescaler,Period
+TIM4.Period=10075
+TIM4.Prescaler=3600
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM2_VS_ClockSourceINT.Mode=Internal
-VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=custom
